--- a/src/pages/Main/style.css
+++ b/src/pages/Main/style.css
@@ -2,8 +2,13 @@
     padding-top: 50px;
 }
 
+/* Search */
+
 .SearchSection {
-    position: relative;
+    display: block;
+    max-width: 87.72%;
+    width: 1080px;
+    margin: 0 auto;
     padding-top: 30px;
 }
 
@@ -36,3 +41,48 @@
     z-index: 1;
 }
 
+/* Card */
+
+.CardContainer {
+    max-width: 1080px;
+    width: 87.72%;
+    margin: 0 auto;
+    padding: 25px 0;
+}
+
+.CardList {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 auto;
+    gap: 20px 20px;
+}
+
+.CardList > li {
+    position: relative;
+    width: calc(50% - 10px);
+}
+
+.Card {
+    width: 100%;
+    height: 176px;
+    border: 1px solid rgb(177, 177, 177);
+    border-radius: 10px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    box-sizing: border-box;
+    display: inline-flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.Card__address {
+    display: flex;
+}
+
+.Card__address::before {
+    display: inline-block;
+    content: "";
+    width: 1px;
+    height: 20px;
+    background-color: #e1e2e3;
+    margin: auto 10px;
+}
