--- a/src/pages/Main/style.css
+++ b/src/pages/Main/style.css
@@ -27,17 +27,22 @@
 .SearchInput__input {
     height: 50px;
     width: 100%;
+    padding: 0 50px;
     border: none;
     border-radius:30px;
     background: rgb(197, 227, 251);
     box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.1);
 }
 
+.SearchInput__input:focus {
+    outline: none;
+}
+
 .SearchInput__button {
     position: absolute;
     color: currentColor;
     right: 46px;
-    top: 16px;
+    top: 15px;
     z-index: 1;
 }
 
