design: 검색창 UI 입력 글씨 크기증가
Refs: #2

--- a/src/pages/Main/style.css
+++ b/src/pages/Main/style.css
@@ -32,6 +32,8 @@
     border-radius:30px;
     background: rgb(197, 227, 251);
     box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.1);
+    font-size: 18px;
+    text-align: center;
 }
 
 .SearchInput__input:focus {
