feat: HospitalCard 컴포넌트와 요청데이터 연결
요청한 데이터를 HospitalCard에서 출력합니다.

Refs: #9

--- a/src/pages/Main/style.css
+++ b/src/pages/Main/style.css
@@ -106,9 +106,8 @@
 .Card__address::before {
     content: "";
     position: absolute;
-    right: 0;
     top: 20px;
-    right: 264px;
+    right: 50%;
     height: 120px;
     border-left: 1px solid rgb(177, 177, 177);
 }
