--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -2,8 +2,9 @@
     position: fixed;
     width: 100%;
     z-index: 100;
-    border: #fff solid 1px;
+    border-bottom: #b1b1b1 solid 1px;
     background-color: #C5E3FB;
+    box-shadow: 0px 4px 10px rgba(177, 177, 177, 0.5);
     text-align: center;
 }
 
