--- a/src/pages/Main/style.css
+++ b/src/pages/Main/style.css
@@ -30,7 +30,7 @@
     padding: 0 50px;
     border: none;
     border-radius:30px;
-    background: rgb(197, 227, 251);
+    background: #c5e3fb;
     box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.1);
     font-size: 18px;
     text-align: center;
@@ -110,5 +110,13 @@
     right: 50%;
     height: 120px;
     border-left: 1px solid rgb(177, 177, 177);
+}
+
+.CardList__none {
+    position: relative;
+    margin: 5px auto;
+    font-size: 24px;
+    text-align: center;
+    opacity: 0.7;
 }
 
