--- a/src/pages/Main/style.css
+++ b/src/pages/Main/style.css
@@ -76,7 +76,7 @@
     display: inline-flex;
     justify-content: space-between;
     align-items: center;
-    border: 1px solid rgb(177, 177, 177);
+    border: 1px solid #b1b1b1;
     border-radius: 10px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     box-sizing: border-box;
